[gd_scene load_steps=9 format=3 uid="uid://cj62qmxdo7juy"]

[ext_resource type="Script" path="res://Scripts/UI/player_select_screen.gd" id="1_00gve"]
[ext_resource type="Resource" uid="uid://bpljforopp5a8" path="res://Resources/Players/all_players.tres" id="2_c644b"]
[ext_resource type="Texture2D" uid="uid://c55qcsmpkjh3" path="res://Assets/_8ae7189c-5d5d-4923-88c1-0dbfebddb04c.jpeg" id="4_1btx3"]
[ext_resource type="PackedScene" uid="uid://dujgwpibibjgl" path="res://Scenes/UI/vignette.tscn" id="5_hv11v"]
[ext_resource type="PackedScene" uid="uid://ddj8blxbhm20n" path="res://Scenes/UI/sound_button.tscn" id="5_ocdwc"]

[sub_resource type="Animation" id="Animation_1feiu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PanelContainer/InformationMarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6ov6n"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PanelContainer/InformationMarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a737n"]
_data = {
"RESET": SubResource("Animation_1feiu"),
"show": SubResource("Animation_6ov6n")
}

[node name="PlayerSelectScreen" type="CanvasLayer" groups=["player_select_screen"]]
layer = 4
script = ExtResource("1_00gve")
player_cards = ExtResource("2_c644b")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -420.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_1btx3")
expand_mode = 4

[node name="Vignette" parent="." instance=ExtResource("5_hv11v")]
layer = 3

[node name="PlayerCards" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="PlayerInfobox" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerInfobox"]
libraries = {
"": SubResource("AnimationLibrary_a737n")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="PlayerScrollContainer" type="ScrollContainer" parent="MarginContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
follow_focus = true
scroll_vertical_custom_step = 0.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PlayerScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 240

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PlayerScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0.25098, 0.25098, 0.25098, 1)
top_level = true
z_index = 2
offset_top = 866.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 10

[node name="InformationMarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 8

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/InformationMarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/InformationMarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/InformationMarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="DescriptionLabel" type="Label" parent="PanelContainer/InformationMarginContainer/ScrollContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Albert Einstein (* 14. März 1879 in Ulm; † 18. April 1955 in Princeton, New Jersey) war ein schweizerisch-US-amerikanischer theoretischer Physiker deutscher Herkunft. Der Wissenschaftler jüdischer Abstammung hatte bis 1896 die württembergische Staatsbürgerschaft, ab 1901 die Schweizer Staatsbürgerschaft und ab 1940 zusätzlich die US-amerikanische. Preußischer Staatsangehöriger war er von 1914 bis 1934.

Einstein gilt als einer der bedeutendsten Physiker der Wissenschaftsgeschichte und weltweit als einer der bekanntesten Wissenschaftler der Neuzeit. Seine Forschungen zur Struktur von Materie, Raum und Zeit sowie zum Wesen der Gravitation veränderten maßgeblich das zuvor geltende newtonsche Weltbild. 1999 wurde Albert Einstein in einer durch die Fachzeitschrift Physics World durchgeführten Umfrage unter führenden Physikern vor Isaac Newton, James Clerk Maxwell, Niels Bohr und Werner Heisenberg zum bedeutendsten Physiker aller Zeiten gewählt.[1]

Einsteins Hauptwerk, die Relativitätstheorie, machte ihn weltberühmt. Im Jahr 1905 erschien seine Arbeit mit dem Titel Zur Elektrodynamik bewegter Körper, deren Inhalt heute als Spezielle Relativitätstheorie bezeichnet wird. 1915 publizierte er die Allgemeine Relativitätstheorie. Auch zur Quantenphysik leistete er wesentliche Beiträge. „Für seine Verdienste um die Theoretische Physik, besonders für seine Entdeckung des Gesetzes des photoelektrischen Effekts“, erhielt er den Nobelpreis des Jahres 1921, der ihm 1922 überreicht wurde. Seine theoretischen Arbeiten spielten – im Gegensatz zur weit verbreiteten Meinung – beim Bau der Atombombe und der Entwicklung der Kernenergie nur eine indirekte Rolle.[2]

Einstein gilt als Inbegriff des Forschers und Genies. Er nutzte seine außerordentliche Bekanntheit auch außerhalb der naturwissenschaftlichen Fachwelt bei seinem Einsatz für Völkerverständigung, Frieden und Sozialismus.[3] "
autowrap_mode = 2

[node name="BackButton" parent="." instance=ExtResource("5_ocdwc")]
unique_name_in_owner = true
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -938.0
offset_top = -518.0
offset_right = -838.0
offset_bottom = -468.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "Back
"
